# Kangaroo

./: .gitignore  CMakeLists.txt  Dependencies.cmake  KangarooOptions.cmake  License.md  cppcheck_suppressions.txt  readme.md  tmp.txt  tmp.txt2
.PVS-Studio/: depend_info.json
benchmark/: CMakeLists.txt  attack_mask_benchmarks.cpp
cmake/: CPM.cmake  Cache.cmake  CheckForMold.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  OptimizeForNative.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
include/: Board_Status.h  Move_Receiver.h  Movement_Generator.h  attack_masks.h  attack_tables.h  base.h  bishop_attack_masks.h  bishop_attacks.inc  bitboard.h  chess_board.h  colors.h  constants.h  create_occupantion_of_mask.h  create_possible_bishop_moves.h  create_possible_queen_moves.h  create_possible_rook_moves.h  create_possible_slider_moves.h  king_attacks.h  knight_attacks.h  magic_numbers.h  move_generator.h  pawn_attacks.h  queen_attack_masks.h  rook_attack_masks.h  rook_attacks.inc  types.h
src/: Bitboard.h  Board_Status.cpp  CMakeLists.txt  Move_Receiver.cpp  Movement_Generator.cpp  bishop_attack_masks.h  bitboard.cpp  chess_board.cpp  chess_board.h  colors.h  create_occupantion_of_mask.cpp  create_possible_bishop_moves.cpp  create_possible_queen_moves.cpp  create_possible_rook_moves.cpp  king_attacks.h  knight_attacks.h  magic_numbers.cpp  main.cpp  pawn_attacks.h  queen_attack_masks.h  rook_attack_masks.h
test/: CMakeLists.txt  attack_mask_tests.cpp  attack_masks.h  attack_tables.h  attack_tables_tests.cpp  bishop_attack_mask_tests.cpp  bitboard_tests.cpp  create_occupantion_of_mask_tests.cpp  create_occupation_of_mask_tests.cpp  create_possible_bishop_moves_tests.cpp  create_possible_rook_moves_tests.cpp  create_possible_slider_moves_tests.cpp  generate_pawn_moves_tests.cpp  king_attack_tests.cpp  knight_attacks_tests.cpp  magic_numbers.h  magic_numbers_test.cpp  movement_generator_tests.cpp  pawn_attack_tests.cpp  queen_attack_mask_tests.cpp  rook_attack_mask_tests.cpp  test.cpp
tools/: CMakeLists.txt  attack_masks.h  attack_tables.h  constants_generator.cpp  create_possible_slider_moves.h  hex_to_bitboard.cpp  magic_numbers.cpp  magic_numbers.h
